--- a/src/components/PhotographerDetails.css
+++ b/src/components/PhotographerDetails.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: space-between;
   background-color: #fafafa;
-  padding: 4rem;
+  padding: 2rem;
   margin-top: 4rem;
 }
 @media screen and (max-width: 768px) {
@@ -20,12 +20,14 @@
     background-color: #fff;
   }
 }
+
+.PhotographerDetails_info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 @media screen and (max-width: 768px) {
   .PhotographerDetails_info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
     padding-top: 1rem;
     padding-bottom: 1rem;
   }
@@ -38,7 +40,6 @@
 }
 
 .PhotographerDetails_info_contact button {
-  margin-left: 4rem;
   color: #fff;
   background-color: #901c1c;
   border-radius: 5px;
@@ -62,6 +63,7 @@
 }
 
 .PhotographerDetails_info_contact_name {
+  margin-right: 4rem;
   font-size: 64px;
   color: #d3573c;
   margin-bottom: 0;
@@ -70,6 +72,7 @@
 
 @media screen and (max-width: 768px) {
   .PhotographerDetails_info_contact_name {
+    margin-right: 0;
     font-size: 34px;
     line-height: 34px;
     margin-bottom: 0.25rem;
@@ -79,8 +82,8 @@
 .PhotographerDetails_info_contact_city {
   font-size: 24px;
   color: #901c1c;
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-top: 0.75rem;
+  margin-bottom: 0;
 }
 @media screen and (max-width: 768px) {
   .PhotographerDetails_info_contact_city {
@@ -96,27 +99,32 @@
   font-weight: normal;
   font-size: 12px;
   color: #757575;
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+@media screen and (max-width: 768px) {
+  .headerPhotographer_info_contact_tagline {
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
+  }
 }
 
 .PhotographerDetails_info_contact_tags {
   margin-top: 0.25rem;
+  justify-content: flex-start;
 }
 
 .PhotographerDetails_picture_img {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.PhotographerDetails_picture_img img {
   object-fit: cover;
   width: 250px;
   height: 250px;
   border-radius: 50%;
 }
 @media screen and (max-width: 768px) {
-  .PhotographerDetails_picture_img img {
+  .PhotographerDetails_picture_img {
     width: 110px;
     height: 110px;
   }
