--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -1,21 +1,66 @@
 .ContactForm_background_modal {
-    /* background-color: blue; */
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 form {
-    width: 800px;
-    height: 500px;
-    box-shadow: 0 5px 16px rgba(0,0,0,0.2);
-    background:  #fff;
-    color: #000;
-    border-radius: 10px;
-    position: relative;
-    z-index: 10;
+  width: 80%;
+  max-width: 400px;
+  /* height: 450px; */
+  box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
+  background: #db8876;
+  color: #000;
+  border-radius: 2px;
+  position: relative;
+  z-index: 10;
+  padding: 5px 25px;
 }
 
+.ContactForm_header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.ContactForm_header_XClose {
+  cursor: pointer;
+}
+
+.ContactForm_body {
+  display: flex;
+  flex-direction: column;
+}
+
+.ContactForm_body label {
+  color: #312e2e;
+}
+
+.ContactForm_body input,
+.ContactForm_body textarea {
+  border: none;
+  border-radius: 2px;
+  color: #312e2e;
+  margin-bottom: 0.5rem;
+}
+
+.ContactForm_body input {
+  height: 25px;
+}
+
+.ContactForm_Submit_btn {
+  color: #fff;
+  background-color: #901c1c;
+  border-radius: 5px;
+  border: 1px solid transparent;
+  max-width: 130px;
+  height: 50px;
+  font-weight: bold;
+  font-size: 16px;
+}
