--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -20,7 +20,7 @@ form {
   border-radius: 2px;
   position: relative;
   z-index: 10;
-  padding: 5px 25px;
+  padding: 0 25px 25px 25px;
 }
 
 .ContactForm_header {
