--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -1,19 +1,29 @@
-.ContactForm_background_modal {
+.ContactForm_wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   position: fixed;
   z-index: 2;
   top: 0;
   left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  right: 0;
+  bottom: 0;
 }
 
-form {
+.ContactForm_background_modal {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+.ContactForm_form {
   width: 80%;
   max-width: 400px;
-  /* height: 450px; */
   box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
   background: #db8876;
   color: #000;
