--- a/src/components/Lightbox/Lightbox.css
+++ b/src/components/Lightbox/Lightbox.css
@@ -26,3 +26,25 @@
   z-index: 10;
   color: red;
 }
+
+.Next_btn {
+  position: absolute;
+  transform: translateY(25%);
+  right: 1rem;
+  color: #901c1c;
+  font-weight: bold;
+  z-index: 11;
+  font-size: 4rem;
+  cursor: pointer;
+}
+
+.Previous_btn {
+  position: absolute;
+  transform: translateY(25%);
+  left: 1rem;
+  color: #901c1c;
+  font-weight: bold;
+  z-index: 11;
+  font-size: 4rem;
+  cursor: pointer;
+}
