--- a/src/components/Lightbox/Lightbox.css
+++ b/src/components/Lightbox/Lightbox.css
@@ -1,10 +1,16 @@
-.ContactForm_background_modal {
+.Lightbox_background_modal {
   width: 100%;
   height: 100%;
   position: fixed;
   z-index: 1;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: white;
   cursor: pointer;
+}
+
+.Lightbox_photo_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .Lightbox_photo {
@@ -13,11 +19,15 @@
   object-fit: cover;
   border: 1px solid #c4c4c4;
   border-radius: 5px;
-  max-height: 60vh;
+  max-height: 90vh;
   min-height: 20vh;
   max-width: 60%;
 }
 
+.Lightbox_photo_container span {
+  z-index: 100;
+  color: #901C1C;
+}
 .CloseCrossIcon {
   position: fixed;
   top: 1.5rem;
@@ -46,5 +56,15 @@
   font-weight: bold;
   z-index: 11;
   font-size: 4rem;
+  cursor: pointer;
+}
+
+.Escape_btn {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  color: #901c1c;
+  font-weight: bold;
+  z-index: 11;
   cursor: pointer;
 }
