:recycle: Refactor the code. :bug: Fix the focus on the contact form and fix the navigation on photo

--- a/src/components/PhotographerDetailsComponentPhotos/PhotographerDetailsComponentPhotos.css
+++ b/src/components/PhotographerDetailsComponentPhotos/PhotographerDetailsComponentPhotos.css
@@ -8,6 +8,11 @@
   cursor: pointer;
 }
 
+.PhotographerDetails_photo_btn {
+  background-color: transparent;
+  border: none;
+}
+
 .PhotographerDetails_photo_figcaption {
   display: flex;
   align-items: center;
